--- a/dashboard.ui
+++ b/dashboard.ui
@@ -27,17 +27,61 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="walletAddress">
+   <widget class="QLabel" name="filterLabel">
     <property name="geometry">
      <rect>
       <x>1200</x>
       <y>0</y>
-      <width>400</width>
+      <width>80</width>
       <height>50</height>
      </rect>
     </property>
+    <property name="text">
+     <string>Nodes:</string>
+    </property>
    </widget>
-   <widget class="QListWidget" name="listWidget">
+   <widget class="QLineEdit" name="walletLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>50</y>
+     <width>321</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::StrongFocus</enum>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+  </widget>
+   <widget class="QPushButton" name="viewTransactionsBtn">
+    <property name="geometry">
+     <rect>
+      <x>1550</x>
+      <y>980</y>
+      <width>50</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View Transactions</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="autoDefault">
+     <bool>true</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="nodeListWidget">
     <property name="geometry">
      <rect>
       <x>1200</x>
@@ -48,6 +92,137 @@
     </property>
    </widget>
   </widget>
+  <widget class="QLabel" name="displayOrderLabel">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>0</y>
+      <width>100</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Display Order:</string>
+    </property>
+   </widget>
+  <widget class="QComboBox" name="displayOrderPicker">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>0</y>
+      <width>150</width>
+      <height>50</height>
+     </rect>
+    </property>
+   </widget>
+  <widget class="QLabel" name="transactionTypeLabel">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>100</y>
+      <width>110</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Transaction Type:</string>
+    </property>
+   </widget>
+  <widget class="QComboBox" name="transactionTypePicker">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>100</y>
+      <width>150</width>
+      <height>50</height>
+     </rect>
+    </property>
+   </widget>
+  <widget class="QLabel" name="timeStartLabel">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>200</y>
+      <width>100</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>From:</string>
+    </property>
+   </widget>
+  <widget class="QDateTimeEdit" name="timeStartPicker">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>400</y>
+      <width>120</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+  <widget class="QLabel" name="timeEndLabel">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>200</y>
+      <width>100</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>To:</string>
+    </property>
+   </widget>
+  <widget class="QDateTimeEdit" name="timeEndPicker">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>600</y>
+      <width>120</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+  <widget class="QLabel" name="transactionsLabel">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>0</y>
+      <width>80</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Transactions:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="transactionFilterEdit">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>50</y>
+     <width>321</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::StrongFocus</enum>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QListWidget" name="transactionListWidget">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>50</y>
+      <width>400</width>
+      <height>930</height>
+     </rect>
+    </property>
+   </widget>
   <widget class="QPushButton" name="addRelationshipBtn">
     <property name="geometry">
      <rect>
@@ -58,7 +233,32 @@
      </rect>
     </property>
     <property name="text">
-     <string>Open Case</string>
+     <string>Add Relationship</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="autoDefault">
+     <bool>true</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+  <widget class="QPushButton" name="dropRelationshipBtn">
+    <property name="geometry">
+     <rect>
+      <x>1550</x>
+      <y>980</y>
+      <width>50</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Drop Relationship</string>
     </property>
     <property name="checkable">
      <bool>false</bool>
