--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -56,7 +56,8 @@
     <bool>false</bool>
    </property>
   </widget>
-   <widget class="QPushButton" name="viewTransactionsBtn">
+<!--   <widget class="QPushButton" name="viewTransactionsBtn">-->
+   <widget class="QPushButton" name="addNodeBtn">
     <property name="geometry">
      <rect>
       <x>1550</x>
@@ -66,7 +67,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>View Transactions</string>
+     <string>Add Node</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
@@ -111,7 +112,7 @@
       <x>1200</x>
       <y>0</y>
       <width>150</width>
-      <height>50</height>
+      <height>20</height>
      </rect>
     </property>
    </widget>
@@ -134,7 +135,7 @@
       <x>1200</x>
       <y>100</y>
       <width>150</width>
-      <height>50</height>
+      <height>20</height>
      </rect>
     </property>
    </widget>
@@ -273,6 +274,31 @@
      <bool>false</bool>
     </property>
    </widget>
+  <widget class="QPushButton" name="dropNodeBtn">
+    <property name="geometry">
+     <rect>
+      <x>1550</x>
+      <y>980</y>
+      <width>50</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Drop Node</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="autoDefault">
+     <bool>true</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -289,6 +315,7 @@
     <addaction name="actionOpen"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
+    <addaction name="actionHelp"/>
     <addaction name="actionClose"/>
     <addaction name="separator"/>
    </widget>
@@ -302,6 +329,11 @@
   <action name="actionSave">
    <property name="text">
     <string>Save</string>
+   </property>
+  </action>
+  <action name="actionHelp">
+   <property name="text">
+    <string>Help</string>
    </property>
   </action>
   <action name="actionClose">
