--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Digifax - Dashboard</string>
+   <string>DigiTrace - Dashboard</string>
   </property>
   <property name="windowOpacity">
    <double>0.970000000000000</double>
